update logo and remove some extra sections

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Description -->
     <meta name="description" content="MegaOne is a highly creative, modern, visually stunning and Bootstrap responsive multipurpose studio and portfolio HTML5 template with ready home page demos.">
     <!-- Page Title -->
-    <title>Web Agency | MegaOne HTML5 Template</title>
+    <title>Daring Deevs</title>
     <!-- Favicon -->
     <link href="vendor/img/favicon.ico" rel="icon">
     <!-- Bundle -->
@@ -69,7 +69,7 @@
                     <div class="banner-icons mt-2 mr-2">
                         <a href="#"><i class="lab la-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-x-twitter"></i></a>
-                        <a href="#"><i class="lab la-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/company/daringdeevs/" target="_blank"><i class="lab la-linkedin-in"></i></a>
                         <a href="#"><i class="lab la-instagram"></i></a>
                     </div>
                 </div>
@@ -84,8 +84,6 @@
                     <a class="nav-link scroll line" href="#about">About</a>
                     <a class="nav-link scroll line" href="#team">Team</a>
                     <a class="nav-link scroll line" href="#work">Work</a>
-                    <a class="nav-link scroll line" href="#pricing">Pricing</a>
-                    <a class="nav-link scroll line" href="#blog">Blog</a>
                     <a class="nav-link scroll line" href="#contact">Contact</a>
                 </div>
             </div>
@@ -116,12 +114,6 @@
                         <a class="nav-link scroll" href="#work">Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link scroll" href="#pricing">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link scroll" href="#blog">Blog</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -131,7 +123,7 @@
                 <ul class="social-icons-simple">
                     <li><a class="facebook-text-hvr" href="javascript:void(0)"><i class="fab fa-facebook-f"></i></a></li>
                     <li><a class="twitter-text-hvr" href="javascript:void(0)"><i class="fab fa-x-twitter"></i></a></li>
-                    <li><a class="linkedin-text-hvr" href="javascript:void(0)"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a class="linkedin-text-hvr" href="https://www.linkedin.com/company/daringdeevs/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                     <li><a class="instagram-text-hvr" href="javascript:void(0)"><i class="fab fa-instagram"></i></a></li>
                 </ul>
                 <p class="">&copy; 2024 MegaOne. Made With Love by <span class="d-inline d-lg-block"> ThemesIndustry</span></p>
@@ -167,8 +159,8 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-12 col-md-10 col-lg-8 offset-md-1 offset-lg-2 heading-area text-center">
-                    <h4 class="main-font font-weight-bold text-white wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.2s">Creative & Design</h4>
-                    <h2 class="alt-font text-white my-3 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.6s">Web Agency</h2>
+                    <h4 class="main-font font-weight-bold text-white wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.2s">Design & Development</h4>
+                    <h2 class="alt-font text-white my-3 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.6s">Video Games</h2>
                     <a href="#about" class="scroll btn btn-medium btn-rounded btn-yellow text-capitalize mt-3 mb-5 mb-md-0 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2s">Learn More<span></span></a>
                 </div>
             </div>
@@ -182,7 +174,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-10 col-lg-8 offset-md-1 offset-lg-2 heading-area text-center wow zoomIn" data-wow-duration="1s" data-wow-delay=".1s">
-                <h2 class="heading">Browse our amazing <span class="d-block">design services</span></h2>
+                <h2 class="heading">Browse our <span class="d-block">Projects</span></h2>
             </div>
         </div>
         <div class="row justify-content-center">
@@ -480,214 +472,6 @@
 </section>
 <!-- End Work -->
 
-<!-- Start Counter -->
-<section class="counter ">
-    <div class="container position-relative">
-        <div class="row align-items-center">
-            <div class="col-12 col-md-6 wow slideInLeft" data-wow-duration="1s" data-wow-delay=".1s">
-                <div class="counter-content">
-                    <h3 class="my-3">Our many years of experience <span> in numbers</span></h3>
-                    <span class="underline"></span>
-                    <p class="alt-font">We show you our professional achievements in numbers, which show the acquired skills and trust of many clients.</p>
-                </div>
-            </div>
-            <div class="col-12 col-md-6 text-center wow slideInRight" data-wow-duration="1s" data-wow-delay=".1s">
-                <div class="row mt-5 mt-md-0">
-                    <!-- Counter -->
-                    <div class="col-12 col-md-4">
-                        <div class="parallax-box">
-                            <i class="lni lni-handshake"></i>
-                            <h2 class="count">4500</h2>
-                            <h5>Satisfied customers</h5>
-                        </div>
-                    </div>
-                    <!-- Counter -->
-                    <div class="col-12 col-md-4">
-                        <div class="parallax-box">
-                            <i class="lni lni-world"></i>
-                            <h2 class="count">9500</h2>
-                            <h5>Tasks Completed</h5>
-                        </div>
-                    </div>
-                    <!-- Counter -->
-                    <div class="col-12 col-md-4">
-                        <div class="parallax-box">
-                            <i class="lni lni-tab"></i>
-                            <h2 class="count">6000</h2>
-                            <h5>Carried out training</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- End Counter -->
-
-<!-- Start Review -->
-<section class="testimonial bg-black bx-container">
-    <div class="container">
-        <div class="row pt-3">
-            <div class="col-12">
-                <!-- Testimonial Slider -->
-                <div id="testimonial-carousal" class="testimonial-owl owl-carousel owl-theme">
-                    <!-- Item-1 -->
-                    <div class="item text-center">
-                        <div class="description">
-                            <p class="paragraph text-white">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem ipsum dolor sit amet,temp consectetur adipisicing elit.</p>
-                        </div>
-                        <div class="testimonial-img">
-                            <img src="web-agency/img/review-1.png" alt="">
-                        </div>
-                        <div class="testimonial-tittle mt-3 mb-3">
-                            <h4 class="text-yellow main-font">Ellizabeth Taylor</h4>
-                            <span class="alt-font text-white">Amazon</span>
-                        </div>
-                    </div>
-                    <!-- Item-2 -->
-                    <div class="item text-center">
-                        <div class="description">
-                            <p class="paragraph  text-white">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem ipsum dolor sit amet,temp consectetur adipisicing elit.</p>
-                        </div>
-                        <div class="testimonial-img">
-                            <img src="web-agency/img/review-2.png" alt="">
-                        </div>
-                        <div class="testimonial-tittle mt-3 mb-3">
-                            <h4 class="text-yellow main-font">Brenden Taylor</h4>
-                            <span class="alt-font text-white">Microsoft</span>
-                        </div>
-                    </div>
-                    <!-- Item-3 -->
-                    <div class="item text-center">
-                        <div class="description">
-                            <p class="paragraph  text-white">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem ipsum dolor sit amet,temp consectetur adipisicing elit.</p>
-                        </div>
-                        <div class="testimonial-img">
-                            <img src="web-agency/img/review-3.png" alt="">
-                        </div>
-                        <div class="testimonial-tittle mt-3 mb-3">
-                            <h4 class="text-yellow main-font">Ellie Joel</h4>
-                            <span class="alt-font text-white">Amazon</span>
-                        </div>
-                    </div>
-                    <!-- Item-4 -->
-                    <div class="item text-center">
-                        <div class="description">
-                            <p class="paragraph  text-white">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem ipsum dolor sit amet,temp consectetur adipisicing elit.</p>
-                        </div>
-                        <div class="testimonial-img">
-                            <img src="web-agency/img/review-4.png" alt="">
-                        </div>
-                        <div class="testimonial-tittle mt-3 mb-3">
-                            <h4 class="text-yellow main-font">Johnson Smith</h4>
-                            <span class="alt-font  text-white">Microsoft</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- End Review -->
-
-<!-- Start Pricing -->
-<section class="pricing" id="pricing">
-    <div class="container">
-        <!--Heading-->
-        <div class="row text-center">
-            <div class="col-12 col-md-10 col-lg-8 offset-md-1 offset-lg-2 wow zoomIn heading-area" data-wow-duration="1s" data-wow-delay=".1s">
-                <span class="sub-heading ">Lorem ipsum dolor sit amet,</span>
-                <h3 class="heading text-center padding-bottom-half">Let’s Choose a Best Plan</h3>
-            </div>
-        </div>
-
-        <div class="row">
-            <!-- Price-1 -->
-            <div class="col-12 col-lg-4 wow slideInLeft " data-wow-duration="1s" data-wow-delay=".3s">
-                <div class="price-item text-center">
-                    <div class="price_header">
-                        <span class="price_header_text ">Startup</span>
-                        <p class="price_header_content">Click edit button to change this text. Lorem dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
-                    <p class="actual_price"><sup class="dollar">$</sup>19<span class="small_font">/Month</span></p>
-                    <ul class="price-list">
-                        <li>Full access</li>
-                        <li>Unlimited Bandwidth</li>
-                        <li>Email Accounts</li>
-                        <li>8 Free Forks Every Months</li>
-                    </ul>
-                    <a href="javascript:void(0);" class="scroll btn btn-medium btn-rounded btn-trans btn-margin">Learn More</a>
-                </div>
-            </div>
-            <!-- Price-2 -->
-            <div class="col-12 col-lg-4 wow slideInUp" data-wow-duration="1s" data-wow-delay=".6s">
-                <div class="price-item-dark  text-center price-margin">
-                    <div class="price_header">
-                        <span class="price_header_text ">Standard</span>
-                        <p class="price_header_content">Click edit button to change this text. Lorem dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
-                    <p class="actual_price"><sup class="dollar">$</sup>56<span class="small_font">/Month</span></p>
-                    <ul class="price-list">
-                        <li>Full access</li>
-                        <li>Unlimited Bandwidth</li>
-                        <li>Email Accounts</li>
-                        <li>8 Free Forks Every Months</li>
-                    </ul>
-                    <a href="javascript:void(0);" class="scroll btn btn-medium btn-rounded btn-yellow btn-margin">Learn More</a>
-                </div>
-            </div>
-            <!-- Price-3 -->
-            <div class="col-12 col-lg-4 wow slideInRight" data-wow-duration="1s" data-wow-delay=".3s">
-                <div class="price-item text-center">
-                    <div class="price_header">
-                        <span class="price_header_text ">Premium</span>
-                        <p class="price_header_content">Click edit button to change this text. Lorem dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
-                    <p class="actual_price"><sup class="dollar">$</sup>89<span class="small_font">/Month</span></p>
-                    <ul class="price-list">
-                        <li>Full access</li>
-                        <li>Unlimited Bandwidth</li>
-                        <li>Email Accounts</li>
-                        <li>8 Free Forks Every Months</li>
-                    </ul>
-                    <a href="javascript:void(0);" class="scroll btn btn-medium btn-rounded btn-trans btn-margin">Learn More</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- End Pricing -->
-
-<!-- Start Blog -->
-<section class="blog bx-container bg-light-gray" id="blog">
-    <div class="container">
-        <!-- First Row -->
-        <div class="row no-gutters align-items-center padding-bottom-half wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".5s">
-            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                <h2>Designing your time.</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodt temp to the incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis a nostr a exercitation ullamco laboris nisi ut aliquip.</p>
-                <a class="btn btn-medium btn-rounded btn-green" href="web-agency/standalone.html">Learn More</a>
-            </div>
-            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                <div class="hover-effect image blog-img ml-auto"><img src="web-agency/img/blog-img-1.jpg" alt="image"></div>
-            </div>
-        </div>
-
-        <!-- Second Row -->
-        <div class="row no-gutters align-items-center wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1s">
-            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 order-2 order-lg-1">
-                <div class="hover-effect image blog-img mr-auto"><img src="web-agency/img/blog-img-2.jpg" alt="image"></div>
-            </div>
-            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 right-text text-right order-1 order-lg-2">
-                <h2>Branding is an art.</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodt temp to the incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis a nostr a exercitation ullamco laboris nisi ut aliquip.</p>
-                <a class="btn btn-medium btn-rounded btn-green" href="web-agency/standalone.html">Learn More</a>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- End Blog -->
-
 <!-- Start Google Map -->
 <section class="contact">
     <div class="container">
@@ -786,7 +570,7 @@
                         <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-facebook-f"></i><span></span></a></li>
                         <li><a class="wow fadeInDown" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-x-twitter"></i><span></span></a></li>
                         <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-google-plus-g"></i><span></span></a></li>
-                        <li><a class="wow fadeInDown" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-linkedin-in"></i><span></span></a></li>
+                        <li><a class="wow fadeInDown" href="https://www.linkedin.com/company/daringdeevs/" target="_blank"><i aria-hidden="true" class="fab fa-linkedin-in"></i><span></span></a></li>
                         <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-instagram"></i><span></span></a></li>
                     </ul>
                 </div>
