update page info for first release

--- a/WIP.html
+++ b/WIP.html
@@ -185,18 +185,18 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 pl-6">
                     <div class="main-title text-lg-left mb-0 wow fadeInUp" data-wow-delay="300ms">
-                        <h3 class="wow fadeInUp" data-wow-delay="400ms">"Deev" means demon in Farsi</h3>
-                        <p class="pb-4 wow fadeInUp" data-wow-delay="500ms">
-                            We are an indie game studio located in Cologne, Germany. We craft replayable games with
-                            rich, beautiful worlds: Whimsical at heart, and rooted in
-                            cultural tales and traditions.
-                        </p>
-                        <!-- 
+                        <h5 class="wow fadeInUp" data-wow-delay="300ms"> Lorem ipsum dolor sit amet consectetur </h5>
+                        <h2 class="wow fadeInUp" data-wow-delay="400ms"> New agency specialising in creative <span
+                                class="text-yellow js-rotating">design,startup</span></h2>
+                        <p class="pb-4 wow fadeInUp" data-wow-delay="500ms">Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Sed augue diam, accumsan vitae justo non, euismod aliquam lectus. Etiam
+                            elementum tortor quis risus posuere, in cursus arcu lobortis.</p>
+
                         <ul class="text-left wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1s">
                             <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
                             <li>Morbi ornare nibh id cursus vestibulum.</li>
                             <li>Duis vitae lectus facilisis, tristique lorem sit amet, malesuada diam.</li>
-                        </ul> -->
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -310,23 +310,15 @@
 
     <!-- Start Work -->
     <section class="cube-portfolio1 pb-0" id="work">
-        <div class="container padding-bottom-half">
+        <div class="container">
             <!--Heading-->
             <div class="row text-center">
                 <div class="col-12 col-md-10 col-lg-8 offset-md-1 offset-lg-2 wow zoomIn heading-area"
                     data-wow-duration="1s" data-wow-delay=".1s">
-                    <span class="sub-heading">we make dark and whimsical games</span>
-                    <h3 class="heading text-center">What Are We Cooking Now?</h3>
-                    <h3 class="heading text-center text-green">project "Deviloop"</h3>
+                    <span class="sub-heading ">we make dark and whimsical games</span>
+                    <h3 class="heading text-center padding-bottom-half">What Are We Cooking Now?</h3>
                 </div>
             </div>
-
-            <p class="pb-4 wow fadeInUp" data-wow-delay="500ms">
-                A bag-building dungeon crawler where players take on the role of a trickster to banish demons with
-                juggling tricks to rescue their scattered crew before performing at the king’s long-awaited wedding.
-                With a twist of dexterity in combats, it throws player into a dark-comic fantasy world based on folklore
-                elements from different parts of the world.
-            </p>
 
             <div class="row wow fadeInUp">
                 <div class="col-md-12">
@@ -343,7 +335,53 @@
                                 <div class="cbp-l-caption-alignCenter center-block">
                                     <div class="cbp-l-caption-body">
                                         <div class="plus"></div>
-                                        <h5 class="text-white mb-1">Larger View</h5>
+                                        <h5 class="text-white mb-1">View Large</h5>
+                                        <p class="text-white">See Our Amazing Work</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="cbp-item seo marketing">
+                            <a href="web-agency/img/portfolio-img-2.jpg" class="cbp-caption cbp-lightbox">
+                                <div class="cbp-caption-defaultWrap">
+                                    <img src="web-agency/img/portfolio-img-2.jpg" alt="port-2">
+                                </div>
+                                <div class="cbp-caption-activeWrap"></div>
+                                <div class="cbp-l-caption-alignCenter center-block">
+                                    <div class="cbp-l-caption-body">
+                                        <div class="plus"></div>
+                                        <h5 class="text-white mb-1">View Large</h5>
+                                        <p class="text-white">See Our Amazing Work</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="cbp-item seo marketing">
+                            <a href="web-agency/img/portfolio-img-3.jpg" class="cbp-caption cbp-lightbox">
+                                <div class="cbp-caption-defaultWrap">
+                                    <img src="web-agency/img/portfolio-img-3.jpg" alt="port-4">
+                                </div>
+                                <div class="cbp-caption-activeWrap"></div>
+                                <div class="cbp-l-caption-alignCenter center-block">
+                                    <div class="cbp-l-caption-body">
+                                        <div class="plus"></div>
+                                        <h5 class="text-white mb-1">View Large</h5>
+                                        <p class="text-white">See Our Amazing Work</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="cbp-item graphic seo marketing">
+                            <a href="web-agency/img/portfolio-img-4.jpg" class="cbp-caption cbp-lightbox">
+                                <div class="cbp-caption-defaultWrap">
+                                    <img src="web-agency/img/portfolio-img-4.jpg" alt="port-3">
+                                </div>
+                                <div class="cbp-caption-activeWrap"></div>
+                                <div class="cbp-l-caption-alignCenter center-block">
+                                    <div class="cbp-l-caption-body">
+                                        <div class="plus"></div>
+                                        <h5 class="text-white mb-1">View Large</h5>
+                                        <p class="text-white">See Our Amazing Work</p>
                                     </div>
                                 </div>
                             </a>
@@ -355,6 +393,42 @@
     </section>
     <!-- End Work -->
 
+    <!-- Start Google Map -->
+    <section class="contact">
+        <div class="container">
+            <div class="row mx-lg-0 align-items-center">
+                <div class="col-lg-6 col-md-6 col-sm-12 p-0">
+                    <div class="contact-box">
+                        <div class="heading-area text-center text-md-left mb-4">
+                            <span class="sub-heading">Lorem ipsum dolor sit amet,</span>
+                            <h3 class="heading ">MegaOne <span class="text-green">Web Agency</span></h3>
+                        </div>
+
+                        <div class="contact-info text-center text-md-left">
+                            <!--Address-->
+                            <p class="mb-3">123 Street New York City , United States Of America. </p>
+                            <!--Phone-->
+                            <p class="mb-3"> Office Telephone : 001 01085379709<br>
+                                Mobile : 001 63165370895 </p>
+                            <!--Email-->
+                            <p class="mb-3"> Email: <a href="mailto:email@website.com">admin@website.com</a> <br>
+                                Inquiries: <a href="mailto:email@website.com">email@website.com</a> </p>
+                            <!--Timing-->
+                            <p class="mb-0">Mon-Sat: 9am to 6pm</p>
+                        </div>
+                    </div>
+                </div>
+                <!--Google Map-->
+                <div class="col-lg-6 col-md-6 col-sm-12 p-0 col-map box-shadow-map">
+                    <div class="mapouter">
+                        <div id="map" class="map bg-img-map"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Google Map -->
+
     <!-- Start Contact -->
     <section class="bg-black bx-container" id="contact">
         <div class="container">
@@ -362,7 +436,7 @@
             <div class="row text-center mb-5">
                 <div class="col-12 col-md-10 col-lg-8 offset-md-1 offset-lg-2 wow zoomIn heading-area"
                     data-wow-duration="1s" data-wow-delay=".1s">
-                    <span class="sub-heading text-white">want to learn more?</span>
+                    <span class="sub-heading text-white">Lorem ipsum dolor sit amet,</span>
                     <h3 class="heading text-center text-green">Let’s Get In Touch</h3>
                 </div>
             </div>
