fix images and contact form

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
             </div>
 
             <!--contact us-->
-            <form class="contact-form" id="contact-form-data">
+            <form class="contact-form" action="https://formspree.io/f/xzznarna" method="post">
                 <div class="row wow fadeIn" data-wow-duration="1.5s" data-wow-delay=".5s">
 
                     <div class="col-sm-12" id="result"></div>
