update submit button

--- a/index.html
+++ b/index.html
@@ -404,8 +404,7 @@
                         </div>
                     </div>
                     <div class="col-sm-12">
-                        <button type="button" class="btn contact_btn btn-large btn-yellow btn-rounded mt-4"
-                            id="submit_btn">Contact Now</button>
+                        <button type="button" class="btn contact_btn btn-large btn-yellow btn-rounded mt-4">Contact Now</button>
                     </div>
                 </div>
             </form>
