update logo. add other social media. update some texts. add gmail

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Page Title -->
     <title>Daring Deevs</title>
     <!-- Favicon -->
-    <link href="web-agency\img\logo.png" rel="icon">
+    <link href="web-agency\img\logo_favicon.png" rel="icon">
     <!-- Bundle -->
     <link rel="stylesheet" href="vendor/css/bundle.min.css">
     <!-- Plugin Css -->
@@ -74,6 +74,11 @@
                                     class="lab la-linkedin-in"></i></a>
                             <a href="https://www.instagram.com/daringdeevs/" target="_blank"><i
                                     class="lab la-instagram"></i></a>
+                            <a href="https://bsky.app/profile/daringdeevs.bsky.social" target="_blank"><i
+                                    class="fab fa-bluesky"></i></a>
+                            <a href="https://www.youtube.com/@daringdeevs" target="_blank"><i
+                                    class="fab fa-youtube"></i></a>
+                            <a href="https://daringdeevs.itch.io" target="_blank"><i class="fab fa-itch-io"></i></a>
                         </div>
                     </div>
                 </div>
@@ -130,9 +135,16 @@
                         <li><a class="linkedin-text-hvr" href="https://www.linkedin.com/company/daringdeevs/"
                                 target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                         <li><a class="instagram-text-hvr" href="https://www.instagram.com/daringdeevs/"
-                                target="_blank"><i class="fab fa-instagram"></i></a>
-                        </li>
+                                target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li><a class="bluesky-text-hvr" href="https://bsky.app/profile/daringdeevs.bsky.social"
+                                target="_blank"><i class="fab fa-bluesky"></i></a></li>
+                        <li><a class="youtube-text-hvr" href="https://www.youtube.com/@daringdeevs" target="_blank"><i
+                                    class="fab fa-youtube"></i></a></li>
+                        <li><a class="itch-text-hvr" href="https://daringdeevs.itch.io" target="_blank"><i
+                                    class="fab fa-itch-io"></i></a></li>
                     </ul>
+                    <div class=""><a href="mailto:daring.deevs@gmail.com" target="_blank">daring.deevs@gmail.com</a>
+                    </div>
                     <p class="">&copy; 2024 MegaOne. Made With Love by <span class="d-inline d-lg-block">
                             ThemesIndustry</span></p>
                 </div>
@@ -185,7 +197,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 pl-6">
                     <div class="main-title text-lg-left mb-0 wow fadeInUp" data-wow-delay="300ms">
-                        <h3 class="wow fadeInUp" data-wow-delay="400ms">"Deev" means demon in Farsi</h3>
+                        <h3 class="wow fadeInUp" data-wow-delay="400ms">"Deev" (dēw, dīv) means demon</h3>
                         <p class="pb-4 wow fadeInUp" data-wow-delay="500ms">
                             We are an indie game studio located in Cologne, Germany. We craft replayable games with
                             rich, beautiful worlds: Whimsical at heart, and rooted in
@@ -364,6 +376,7 @@
                     data-wow-duration="1s" data-wow-delay=".1s">
                     <span class="sub-heading text-white">want to learn more?</span>
                     <h3 class="heading text-center text-green">Let’s Get In Touch</h3>
+                    <span class="sub-heading text-white">daring.deevs@gmail.com</span>
                 </div>
             </div>
 
@@ -404,7 +417,8 @@
                         </div>
                     </div>
                     <div class="col-sm-12">
-                        <button type="submit" class="btn contact_btn btn-large btn-yellow btn-rounded mt-4">Contact Now</button>
+                        <button type="submit" class="btn contact_btn btn-large btn-yellow btn-rounded mt-4">Contact
+                            Now</button>
                     </div>
                 </div>
             </form>
@@ -427,13 +441,21 @@
                                         class="fab fa-linkedin-in"></i><span></span></a></li>
                             <li><a class="wow fadeInUp" href="https://www.instagram.com/daringdeevs/" target="_blank"><i
                                         aria-hidden="true" class="fab fa-instagram"></i><span></span></a></li>
+                            <li><a class="wow fadeInUp" href="https://bsky.app/profile/daringdeevs.bsky.social"
+                                    target="_blank"><i aria-hidden="true" class="fab fa-bluesky"></i><span></span></a>
+                            </li>
+                            <li><a class="wow fadeInDown" href="https://www.youtube.com/@daringdeevs" target="_blank"><i
+                                        aria-hidden="true" class="fab fa-youtube"></i><span></span></a></li>
+                            <li><a class="wow fadeInDown" href="https://daringdeevs.itch.io" target="_blank"><i
+                                        aria-hidden="true" class="fab fa-itch-io"></i><span></span></a></li>
                         </ul>
                     </div>
+                    <div class="col-12 text-center mt-3"><a href="mailto:daring.deevs@gmail.com"
+                            target="_blank">daring.deevs@gmail.com</a></div>
                 </div>
                 <!--Text-->
                 <div class="col-12 text-center mt-3">
-                    <p class="company-about fadeIn">&copy; 2024 MegaOne. Made With Love By <a
-                            href="javascript:void(0);">Themesindustry</a>
+                    <p class="company-about fadeIn">&copy; 2024 MegaOne. Made With Love By Themesindustry
                     </p>
                 </div>
             </div>
