update game description

--- a/index.html
+++ b/index.html
@@ -334,10 +334,13 @@
             </div>
 
             <p class="pb-4 wow fadeInUp" data-wow-delay="500ms">
-                A bag-building dungeon crawler where players take on the role of a trickster to banish demons with
-                juggling tricks to rescue their scattered crew before performing at the king’s long-awaited wedding.
-                With a twist of dexterity in combats, it throws player into a dark-comic fantasy world based on folklore
-                elements from different parts of the world.
+                Deviloop is a kinetic roguelike bag-building where you take on the role of a trickster. You
+                banish demons with juggling tricks to rescue your scattered crew before performing at the king’s
+                long-awaited wedding. During the combat, items are thrown into the air. You must
+                react quickly, improvise, and grab the items to create powerful combos, all while gathering relics,
+                materials, and new items for your base. With its blend of skill-based action, strategic builds, and
+                creatures inspired by lesser-represented cultural tales and folklore, the game offers a fast-paced
+                experience with rich lore and strong replayability.
             </p>
 
             <div class="row wow fadeInUp">
