update meta data

--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <!-- Meta Tags -->
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
-    <!-- Author -->
-    <meta name="author" content="Themes Industry">
     <!-- Description -->
     <meta name="description"
-        content="MegaOne is a highly creative, modern, visually stunning and Bootstrap responsive multipurpose studio and portfolio HTML5 template with ready home page demos.">
+        content="An Indie Game Studio in Cologne, Crafting Dark and Whimsical Games Rooted in Cultural Tales and Traditions.">
     <!-- Page Title -->
     <title>Daring Deevs</title>
     <!-- Favicon -->
